--- a/index.html
+++ b/index.html
@@ -8,21 +8,25 @@
     <title>Momentum</title>
   </head>
   <body>
+    <h2 id="clock">00:00:00</h2>
     <form id="login-form" class="hidden">
       <input required maxlength="15" type="text" placeholder="username" />
       <button>Log In</button>
     </form>
-    <h2 id="clock">00:00:00</h2>
     <h1 id="greeting" class="hidden"></h1>
+    <form id="todo-form">
+      <input type="text" placeholder="입력해주세요" required />
+    </form>
+    <ul id="todo-list"></ul>
 
     <div id="quote">
       <span></span>
       <span></span>
     </div>
-
     <script src="js/clock.js"></script>
     <script src="js/greetings.js"></script>
     <script src="js/quotes.js"></script>
     <script src="js/background.js"></script>
+    <script src="js/todo.js"></script>
   </body>
 </html>
